{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 762,
  "lineage": "9b8cb813-c483-f0f6-2f26-dd22bef3fb81",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08433be7f2e61ef5b",
            "arn": "arn:aws:ec2:eu-north-1:650251713601:instance/i-0330ba15da20c0035",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0330ba15da20c0035",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mtckey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-075133a242439f194",
            "private_dns": "ip-10-0-2-5.eu-north-1.compute.internal",
            "private_ip": "10.0.2.5",
            "public_dns": "ec2-56-228-27-207.eu-north-1.compute.amazonaws.com",
            "public_ip": "56.228.27.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce733740d321773c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cf2f6b48b43a99ee",
            "tags": {
              "Name": "public-bastion-host"
            },
            "tags_all": {
              "Name": "public-bastion-host"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-081baa930157871e8"
            ]
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.vpc_random_int",
            "module.networking.random_shuffle.az_shuffle",
            "module.compute.aws_key_pair.bastion_key",
            "module.compute.data.aws_ami.amzlinux2",
            "module.networking.aws_security_group.bastion_public_sg",
            "module.networking.aws_subnet.pht_public_subnets",
            "module.networking.aws_vpc.my_eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:650251713601:route-table/rtb-09b62f057d5816558",
            "default_route_table_id": "rtb-09b62f057d5816558",
            "id": "rtb-09b62f057d5816558",
            "owner_id": "650251713601",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-route-table-(private)"
            },
            "tags_all": {
              "Name": "main-route-table-(private)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8d09d389dfb5a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_eks_vpc",
            "module.networking.random_integer.vpc_random_int"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:650251713601:internet-gateway/igw-0c28e5fbbdbe18ba8",
            "id": "igw-0c28e5fbbdbe18ba8",
            "owner_id": "650251713601",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-0b8d09d389dfb5a04"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_eks_vpc",
            "module.networking.random_integer.vpc_random_int"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c28e5fbbdbe18ba8",
            "id": "r-rtb-0e4f04da10d0d06e81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e4f04da10d0d06e8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.random_integer.vpc_random_int",
            "module.networking.aws_internet_gateway.my_igw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_vpc.my_eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:650251713601:route-table/rtb-0e4f04da10d0d06e8",
            "id": "rtb-0e4f04da10d0d06e8",
            "owner_id": "650251713601",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c28e5fbbdbe18ba8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8d09d389dfb5a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_eks_vpc",
            "module.networking.random_integer.vpc_random_int"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ace7f243380344d0",
            "route_table_id": "rtb-0e4f04da10d0d06e8",
            "subnet_id": "subnet-0cf2f6b48b43a99ee"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_eks_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.vpc_random_int",
            "module.networking.random_shuffle.az_shuffle",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.pht_public_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a1013f13d27c4a4",
            "route_table_id": "rtb-0e4f04da10d0d06e8",
            "subnet_id": "subnet-09fd459bc5fa9c3fc"
          },
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.vpc_random_int",
            "module.networking.random_shuffle.az_shuffle",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.pht_public_subnets",
            "module.networking.aws_vpc.my_eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion_sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:650251713601:security-group/sg-081baa930157871e8",
            "description": "bastion-host-security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081baa930157871e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "78.145.66.200/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "650251713601",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8d09d389dfb5a04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_eks_vpc",
            "module.networking.random_integer.vpc_random_int"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pht_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:650251713601:subnet/subnet-0cf2f6b48b43a99ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf2f6b48b43a99ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "650251713601",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-subnet-1"
            },
            "tags_all": {
              "Name": "eks-public-subnet-1"
            },
            "vpc_id": "vpc-0b8d09d389dfb5a04"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_eks_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.vpc_random_int",
            "module.networking.random_shuffle.az_shuffle"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:650251713601:subnet/subnet-09fd459bc5fa9c3fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fd459bc5fa9c3fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "650251713601",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-subnet-2"
            },
            "tags_all": {
              "Name": "eks-public-subnet-2"
            },
            "vpc_id": "vpc-0b8d09d389dfb5a04"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_eks_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_integer.vpc_random_int",
            "module.networking.random_shuffle.az_shuffle"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:650251713601:vpc/vpc-0b8d09d389dfb5a04",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0180d404eb0bfd303",
            "default_route_table_id": "rtb-09b62f057d5816558",
            "default_security_group_id": "sg-0a0da318017537cdd",
            "dhcp_options_id": "dopt-06266ad29ef5c4fd4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b8d09d389dfb5a04",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b62f057d5816558",
            "owner_id": "650251713601",
            "tags": {
              "Name": "my-eks-vpc-11"
            },
            "tags_all": {
              "Name": "my-eks-vpc-11"
            }
          },
          "dependencies": [
            "module.networking.random_integer.vpc_random_int"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}